adding homepage slider

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,25 @@
         <div class="hero-wrapper">
           {% if page.hero %}
             <figure class="hero">
+              {% if page.homepagerotator %}
+              <ul class="slideshow" data-slideshow-interval="3500">
+                <li>
+                  <img src="{{'/images/slider01.jpg' | prepend: site.baseurl }}" alt="Railroad ties in German Style Stacking">
+                </li>
+                <li>
+                  <img src="{{'/images/slider02.jpg' | prepend: site.baseurl }}" alt="Pressure Treated Wood Poles">
+                </li>
+                <li>
+                  <img src="{{'/images/slider03.jpg' | prepend: site.baseurl }}" alt="Pressure Treated Wood Posts">
+                </li>
+                <li>
+                  <img src="{{'/images/slider04.jpg' | prepend: site.baseurl }}" alt="Cahaba is the Largest Treating Plant in the world">
+                </li>
+              </ul>
+              {% else %}
               <img src="{{page.hero | prepend: site.baseurl }}" alt="{{page.heroalt}}">
+              {% endif %}
+              
               {% if page.herocaption %}
               <figcaption>{{page.herocaption}}</figcaption>
               {% endif %}
@@ -25,6 +43,9 @@
 
       {% include footer.html %}
     </div>
+    <script>
+      startSlideshows();
+    </script>
   </body>
 
 </html>
