--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
-<header role="banner" class="site-header">
+<header class="site-header">
   <div class="wrapper">
     <a class="site-title" href="{{ site.homepageurl | prepend: site.baseurl }}">
       <span class="sr-only">{{ site.title }}</span>
     </a>
-    <nav role="navigation" class="site-nav">
+    <nav class="site-nav">
       <ul class="site-nav-primary" role="menu">
         <li role="presentation">
           <a role="menuitem" class="site-nav-link" href="{{ site.homepageurl | prepend: site.baseurl }}">Home</a>
