adding build a truck

--- a/_includes/product-list.html
+++ b/_includes/product-list.html
@@ -2,7 +2,7 @@
   <li>
   	<a href="{{ '/products/poles/' | prepend: site.baseurl }}">
   		{% if include.withpic %}
-		<img src="{{'/images/FPO.jpg' | prepend: site.baseurl }}" alt="">
+		<img src="{{'/images/poles.jpg' | prepend: site.baseurl }}" alt="">
   		{% endif %}
   		Poles
   	</a>
@@ -18,7 +18,7 @@
   <li>
   	<a href="{{ '/products/crossties/' | prepend: site.baseurl }}">
   		{% if include.withpic %}
-		<img src="{{'/images/slider01.jpg' | prepend: site.baseurl }}" alt="">
+		<img src="{{'/images/crossties.jpg' | prepend: site.baseurl }}" alt="">
   		{% endif %}
   		Crossties
   	</a>
@@ -26,7 +26,7 @@
   <li>
   	<a href="{{ '/products/agriculture-products/' | prepend: site.baseurl }}">
   		{% if include.withpic %}
-		<img src="{{'/images/FPO.jpg' | prepend: site.baseurl }}" alt="">
+		<img src="{{'/images/posts.jpg' | prepend: site.baseurl }}" alt="">
   		{% endif %}
   		Agriculture Products
   	</a>
@@ -34,7 +34,7 @@
   <li>
   	<a href="{{ '/products/bio-mass/' | prepend: site.baseurl }}">
   		{% if include.withpic %}
-		<img src="{{'/images/FPO.jpg' | prepend: site.baseurl }}" alt="">
+		<img src="{{'/images/bio-mass.jpg' | prepend: site.baseurl }}" alt="">
   		{% endif %}
   		Bio Mass
   	</a>
