--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}" />
   <script src="{{ '/js/slideshow.js' | prepend: site.baseurl }}"></script>
+  <script src="{{ '/js/build-a-truck.js' | prepend: site.baseurl }}"></script>
   <script src="//use.typekit.net/mpy0pyn.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
 </head>
