adding files to gitignore - adding contact form

--- a/_includes/product-list.html
+++ b/_includes/product-list.html
@@ -10,7 +10,7 @@
   <li>
   	<a href="{{ '/products/piling/' | prepend: site.baseurl }}">
   		{% if include.withpic %}
-		<img src="{{'/images/FPO.jpg' | prepend: site.baseurl }}" alt="">
+		<img src="{{'/images/piling.jpg' | prepend: site.baseurl }}" alt="">
   		{% endif %}
   		Piling
   	</a>
@@ -42,7 +42,7 @@
   <li>
   	<a href="{{ '/products/custom-treating-services/' | prepend: site.baseurl }}">
   		{% if include.withpic %}
-		<img src="{{'/images/FPO.jpg' | prepend: site.baseurl }}" alt="">
+		<img src="{{'/images/custom-treating-services.jpg' | prepend: site.baseurl }}" alt="">
   		{% endif %}
   		Custom Treating Services
   	</a>
