--- a/_includes/service-list.html
+++ b/_includes/service-list.html
@@ -2,7 +2,7 @@
   <li>
     <a href="{{'/services/logistics/' | prepend: site.baseurl }}">
       {% if include.withpic %}
-      <img src="{{'/images/FPO.jpg' | prepend: site.baseurl }}" alt="">
+      <img src="{{'/images/logistics.jpg' | prepend: site.baseurl }}" alt="">
       {% endif %}
       Logistics
     </a>
@@ -10,7 +10,7 @@
   <li>
     <a href="{{'/services/service-area/' | prepend: site.baseurl }}">
       {% if include.withpic %}
-      <img src="{{'/images/FPO.jpg' | prepend: site.baseurl }}" alt="">
+      <img src="{{'/images/service-area.jpg' | prepend: site.baseurl }}" alt="">
       {% endif %}
       Service Area
     </a>
@@ -18,7 +18,7 @@
   <li>
     <a href="{{'/services/build-a-truck/' | prepend: site.baseurl }}">
       {% if include.withpic %}
-      <img src="{{'/images/FPO.jpg' | prepend: site.baseurl }}" alt="">
+      <img src="{{'/images/build-a-truck.jpg' | prepend: site.baseurl }}" alt="">
       {% endif %}
       Build-a-Truck
     </a>
