--- a/css/main.scss
+++ b/css/main.scss
@@ -120,9 +120,38 @@ label.form-block {
     display: block;
     margin-bottom: $spacing-unit;
     > input, > select {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        margin-top: $spacing-unit/2;
         display: block;
         width: 100%;
+        padding: $spacing-unit/2;
+        font-size: 1rem;
+        background-color: white;
+        border: 1px solid $shadow;
     }
+    > select {
+        height: 2.5rem;
+    }
+}
+
+.button {
+    @extend %header-font;
+    @include font-and-line(1, 0.5);
+    @media #{$medium-screen} {
+        @include font-and-line(1, 0.5);
+    }
+    background-color: $primary-color;
+    padding: $spacing-unit/2;
+    text-transform: uppercase;
+    color: white;
+    border: none;
+    @include transition(background-color 200ms linear);
+    &:hover, &:focus {
+        background-color: darken($primary-color, 5);
+    }
+
 }
 
 // hiding elements for screen reader usage only
@@ -525,3 +554,6 @@ $site-logo-height: em(220px);
   }
 }
 
+.contact-page .page-header {
+    margin-bottom: 0;
+}
