adding scale house phone number

--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -12,9 +12,15 @@ layout: default
 		<h2 class="page-subheader">Mailing Address</h2>
 		<p>P.O. Box 160<br>
 		Brierfield, AL 35035</p>
-		<h2 class="page-subheader">Phone</h2>
+		<h2 class="page-subheader">Office</h2>
+		<strong>Phone</strong>
 		<p>205-926-9888</p>
-		<h2 class="page-subheader">Fax</h2>
+		<strong>Fax</strong>
 		<p>205-926-7625</p>
+		<h2 class="page-subheader">Scale House</h2>
+		<strong>Phone</strong>
+		<p>205-926-6866</p>
+		<strong>Fax</strong>
+		<p>205-926-6836</p>
 	</div>
 </aside>
