--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -13,14 +13,14 @@ layout: default
 		<p>P.O. Box 160<br>
 		Brierfield, AL 35035</p>
 		<h2 class="page-subheader">Office</h2>
-		<strong>Phone</strong>
-		<p>205-926-9888</p>
-		<strong>Fax</strong>
-		<p>205-926-7625</p>
+		<p><strong>Phone</strong><br>
+		205-926-9888</p>
+		<p><strong>Fax</strong><br>
+		205-926-7625</p>
 		<h2 class="page-subheader">Scale House</h2>
-		<strong>Phone</strong>
-		<p>205-926-6866</p>
-		<strong>Fax</strong>
-		<p>205-926-6836</p>
+		<p><strong>Phone</strong><br>
+		205-926-6866</p>
+		<p><strong>Fax</strong><br>
+		205-926-6836</p>
 	</div>
 </aside>
